# taikomodel

./: .gitignore  create_dataset.py  eval.py  infer.py  instruction.py  instruction.txt  preprocess.py  pyproject.toml  split_dataset.py  synthesis.py
data/: annotated.json  eval.txt  train.txt
